--- a/src/app/modules/admin/game/list/list.component.html
+++ b/src/app/modules/admin/game/list/list.component.html
@@ -4,7 +4,8 @@
     <div class="absolute inset-x-0 bottom-0" *ngIf="isLoading">
         <mat-progress-bar [mode]="'indeterminate'"></mat-progress-bar>
     </div>
-    <div class="flex flex-col sm:flex-row flex-0 sm:items-center sm:justify-between p-6 sm:py-8 sm:px-10 border-b bg-card dark:bg-transparent">
+    <div
+        class="flex flex-col sm:flex-row flex-0 sm:items-center sm:justify-between p-6 sm:py-8 sm:px-10 border-b bg-card dark:bg-transparent">
         <div class="flex-1 flemin-w-0">
             <!-- Title -->
             <div class="flex flex-row mt-2 justify-between">
@@ -24,6 +25,32 @@
 
     <!-- Main -->
     <div class="relative overflow-x-auto shadow-md sm:rounded-lg m-10  bg-white">
+        <form [formGroup]="form" class="mx-4">
+            <div class="flex flex-col md:flex-row pb-2 mt-5 gap-2">
+                <mat-form-field [ngClass]="formFieldHelpers" class="w-1/4">
+                    <mat-label>ประเภทเกม</mat-label>
+                    <mat-select [formControlName]="'game_categorie_id'" (selectionChange)="rerender()">
+                        <mat-option [value]="null">
+                            ทั้งหมด
+                        </mat-option>
+                        <mat-option *ngFor="let item of categories;" value="{{item.id}}">
+                            {{item.name}}
+                        </mat-option>
+                    </mat-select>
+                </mat-form-field>
+                <mat-form-field [ngClass]="formFieldHelpers" class="w-1/4">
+                    <mat-label>Brand</mat-label>
+                    <mat-select [formControlName]="'brand'" (selectionChange)="rerender()">
+                        <mat-option [value]="null">
+                            ทั้งหมด
+                        </mat-option>
+                        <mat-option *ngFor="let item of brand;" value="{{item}}">
+                            {{item}}
+                        </mat-option>
+                    </mat-select>
+                </mat-form-field>
+            </div>
+        </form>
         <div class="flex flex-col flex-auto p-5  sm:overflow-y-auto">
             <table datatable [dtOptions]="dtOptions" class="table row-border hover w-full bg-white whitespace-nowrap">
                 <thead>
@@ -40,23 +67,19 @@
                 </thead>
                 <tbody *ngIf="dataRow?.length != 0">
                     <tr *ngFor="let item of dataRow; let i = index">
-                        
+
                         <td>{{ pages.begin + (i + 1) }}</td>
-
-                        <td>  <button mat-icon-button color="accent" (click)="showPicture(item.image)">
-                            <mat-icon>image</mat-icon>
-                        </button></td>
-
+                        <td>
+                            <div
+                                class="grid w-full place-items-center overflow-x-scroll rounded-lg p-2 lg:overflow-visible">
+                                <img class="object-cover object-center rounded-lg h-20 w-20" [src]="item.image" />
+                            </div>
+                        </td>
                         <td>{{ item.name ? item.name : "-" }}</td>
-
                         <td>{{ item.brand ? item.brand : "-" }}</td>
-
                         <td>{{ item.category ? item.category?.name : "-" }}</td>
-
                         <td>{{ item.show_step ? item.show_step : "-" }}</td>
-                    
                         <td>{{ item.created_at !== null ? (item.created_at | date : "dd-MM-yy, HH:mm"): "-"}}</td>
-
                         <td>
                             <button mat-icon-button color="accent" (click)="editElement(item)">
                                 <mat-icon>edit</mat-icon>
