--- a/src/app/modules/admin/order/list/list.component.html
+++ b/src/app/modules/admin/order/list/list.component.html
@@ -25,6 +25,32 @@
 
     <!-- Main -->
     <div class="relative overflow-x-auto shadow-md sm:rounded-lg m-10  bg-white">
+        <form [formGroup]="form" class="mx-4">
+            <div class="flex flex-col md:flex-row pb-2 mt-5 gap-2">
+                <mat-form-field [ngClass]="formFieldHelpers" class="w-1/4">
+                    <mat-label>หมวดหมู่</mat-label>
+                    <mat-select [formControlName]="'page_categorie_id'" (selectionChange)="rerender()">
+                        <mat-option [value]="null">
+                            ทั้งหมด
+                        </mat-option>
+                        <mat-option *ngFor="let item of categories;" value="{{item.id}}">
+                            {{item.name}}
+                        </mat-option>
+                    </mat-select>
+                </mat-form-field>
+                <mat-form-field [ngClass]="formFieldHelpers" class="w-1/4">
+                    <mat-label>Brand</mat-label>
+                    <mat-select [formControlName]="'brand'" (selectionChange)="rerender()">
+                        <mat-option [value]="null">
+                            ทั้งหมด
+                        </mat-option>
+                        <mat-option *ngFor="let item of brand;" value="{{item}}">
+                            {{item}}
+                        </mat-option>
+                    </mat-select>
+                </mat-form-field>
+            </div>
+        </form>
         <div class="flex flex-col flex-auto p-5  sm:overflow-y-auto">
             <table datatable [dtOptions]="dtOptions" class="table row-border hover w-full bg-white whitespace-nowrap">
                 <thead>
